Update of Interface
addition of fx:ids and fixes to alignment issues

--- a/src/DnDMain.fxml
+++ b/src/DnDMain.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="645.0" prefWidth="600.0" style="-fx-background-color: #313131;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="645.0" prefWidth="600.0" style="-fx-background-color: #313131;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MonController">
    <children>
       <HBox alignment="CENTER" layoutY="85.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="52.0" prefWidth="600.0">
          <children>
@@ -26,7 +26,7 @@
                         <Font name="Constantia Bold" size="16.0" />
                      </font>
                   </Label>
-                  <Label text="--" textFill="#e7e7d8">
+                  <Label fx:id="strength" text="--" textFill="#e7e7d8">
                      <font>
                         <Font name="Constantia" size="16.0" />
                      </font>
@@ -40,7 +40,7 @@
                         <Font name="Constantia Bold" size="16.0" />
                      </font>
                   </Label>
-                  <Label text="--" textFill="#e7e7d8">
+                  <Label fx:id="dexterity" text="--" textFill="#e7e7d8">
                      <font>
                         <Font name="Constantia" size="16.0" />
                      </font>
@@ -54,7 +54,7 @@
                         <Font name="Constantia Bold" size="16.0" />
                      </font>
                   </Label>
-                  <Label text="--" textFill="#e7e7d8">
+                  <Label fx:id="constitution" text="--" textFill="#e7e7d8">
                      <font>
                         <Font name="Constantia" size="16.0" />
                      </font>
@@ -68,7 +68,7 @@
                         <Font name="Constantia Bold" size="16.0" />
                      </font>
                   </Label>
-                  <Label text="--" textFill="#e7e7d8">
+                  <Label fx:id="intelligents" text="--" textFill="#e7e7d8">
                      <font>
                         <Font name="Constantia" size="16.0" />
                      </font>
@@ -82,7 +82,7 @@
                         <Font name="Constantia Bold" size="16.0" />
                      </font>
                   </Label>
-                  <Label text="--" textFill="#e7e7d8">
+                  <Label fx:id="wisdom" text="--" textFill="#e7e7d8">
                      <font>
                         <Font name="Constantia" size="16.0" />
                      </font>
@@ -96,7 +96,7 @@
                         <Font name="Constantia Bold" size="16.0" />
                      </font>
                   </Label>
-                  <Label text="--" textAlignment="CENTER" textFill="#e7e7d8">
+                  <Label fx:id="charisma" text="--" textAlignment="CENTER" textFill="#e7e7d8">
                      <font>
                         <Font name="Constantia" size="16.0" />
                      </font>
@@ -109,16 +109,16 @@
       <Rectangle fill="#9d0a0e" height="11.0" layoutY="74.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="600.0" />
       <Line endX="404.0" layoutX="155.0" layoutY="147.0" opacity="0.51" startX="-100.0" stroke="#9d0a0e" strokeLineCap="ROUND" strokeLineJoin="BEVEL" strokeWidth="4.0" />
       <Line endX="350.0" layoutX="250.0" layoutY="250.0" opacity="0.51" startX="-250.0" stroke="#9d0a0e" strokeLineCap="ROUND" strokeLineJoin="BEVEL" strokeWidth="4.0" />
-      <VBox alignment="TOP_CENTER" layoutX="168.0" layoutY="145.0" prefHeight="93.0" prefWidth="279.0">
+      <VBox layoutY="149.0" prefHeight="93.0" prefWidth="600.0">
          <children>
-            <HBox fx:id="name" alignment="BOTTOM_CENTER" prefHeight="100.0" prefWidth="200.0">
+            <HBox alignment="BOTTOM_CENTER" prefHeight="52.0" prefWidth="600.0">
                <children>
-                  <ImageView fitHeight="52.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="typeImage" fitHeight="150.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../../../Desktop/DnD_Images_Game/Monsters/Celeste.png" />
+                        <Image url="@Monsters/Aberration.png" />
                      </image>
                   </ImageView>
-                  <Label prefHeight="43.0" prefWidth="188.0" text="&quot;name&quot;:" textFill="#e7e7d8">
+                  <Label fx:id="name" text="name:" textFill="#e7e7d8">
                      <font>
                         <Font name="Constantia Bold" size="36.0" />
                      </font>
@@ -127,22 +127,7 @@
             </HBox>
             <HBox alignment="TOP_CENTER" prefHeight="65.0" prefWidth="238.0">
                <children>
-                  <Label fx:id="size" prefHeight="43.0" prefWidth="188.0" text="&quot;size&quot;:" textFill="#e7e7d8">
-                     <font>
-                        <Font name="Constantia Italic" size="18.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="type" prefHeight="43.0" prefWidth="188.0" text="&quot;type&quot;:" textFill="#e7e7d8">
-                     <font>
-                        <Font name="Constantia Italic" size="18.0" />
-                     </font>
-                  </Label>
-                  <Label prefHeight="43.0" prefWidth="188.0" text="," textFill="#e7e7d8">
-                     <font>
-                        <Font name="Constantia Italic" size="18.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="alignment" prefHeight="43.0" prefWidth="188.0" text="&quot;alignment&quot;:" textFill="#e7e7d8">
+                  <Label fx:id="sizeTypeAli" alignment="TOP_CENTER" prefHeight="41.0" prefWidth="636.0" text="S C, A:" textFill="#e7e7d8">
                      <font>
                         <Font name="Constantia Italic" size="18.0" />
                      </font>
@@ -184,7 +169,7 @@
                </children>
             </VBox>
             <Region prefHeight="200.0" prefWidth="200.0" />
-            <Button fx:id="Button" accessibleRole="MENU_BUTTON" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="67.0" prefWidth="67.0" style="-fx-background-color: transparent;">
+            <Button fx:id="button" accessibleRole="MENU_BUTTON" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#buttonPressed" prefHeight="67.0" prefWidth="67.0" style="-fx-background-color: transparent;">
                <cursor>
                   <Cursor fx:constant="DEFAULT" />
                </cursor>
